RESOLVED FIXED135449
REGRESSION (WK2 iOS): Inline editing for Chinese and Japanese keyboards does not work in Safari
https://bugs.webkit.org/show_bug.cgi?id=135449
Summary REGRESSION (WK2 iOS): Inline editing for Chinese and Japanese keyboards does ...
Enrica Casucci
Reported 2014-07-30 19:14:48 PDT
When moving the selection with the phrase boundary gesture the inline candidates are not updated, therefore the text input is also out of sync. <rdar://problem/17824833>
Attachments
Patch (1.52 KB, patch)
2014-07-30 19:17 PDT, Enrica Casucci
benjamin: review+
Enrica Casucci
Comment 1 2014-07-30 19:17:58 PDT
Benjamin Poulain
Comment 2 2014-07-30 19:19:08 PDT
Comment on attachment 235801 [details] Patch Did you perf test this?
Benjamin Poulain
Comment 3 2014-07-30 19:19:44 PDT
You may want to rewrite WebKitTestRunner so that we can test this... ;)
Enrica Casucci
Comment 4 2014-07-30 19:20:33 PDT
Committed revision 171829.
Note You need to log in before you can comment on or make changes to this bug.