REGRESSION (WK2 iOS): Inline editing for Chinese and Japanese keyboards does not work in Safari. https://bugs.webkit.org/show_bug.cgi?id=135449 <rdar://problem/17824833>

Reviewed by Benjamin Poulain.

The WebProcess sends the notification that the gesture modified the phrase boundary,
but the flag was not being converted properly, therefore we failed to notify
the text input system that a change had occurred.

* UIProcess/ios/WKContentViewInteraction.mm:
(toUIWKSelectionFlags):



Canonical link: https://commits.webkit.org/153312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171829 268f45cc-cd09-0410-ab3c-d52691b4dbfc